<resources>
    <string name="app_name">FireBaseAuthenticationyoutube180321</string>
    <string name="name">name</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">log in</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="click_here_to_sign_up">Click here to sign up</string>
    <string name="setPortrait">Tap on the android icon to change your portrait</string>
    <string name="portrait">portrait</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="save">Save</string>
    <string name="verified">Verified</string>
    <string name="log_out">Log out</string>
</resources>
