<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nackademin.foureverhh.firebaseauthenticationyoutube180321.SignUpActivity">

    <EditText
        android:id="@+id/userNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="numberPassword"/>
    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
</LinearLayout>


