<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nackademin.foureverhh.firebaseauthenticationyoutube180321.ProfieActivity">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/setPortrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPortrait"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/portrait"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/progressbar"
            android:layout_centerHorizontal="true"
           android:layout_marginTop="30dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/portrait" />
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressbar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_display_name" />
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"/>
    <TextView
        android:text="@string/verified"
        android:id="@+id/textVerified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

</LinearLayout>
